successful map render with npm package

--- a/public/index.html
+++ b/public/index.html
@@ -22,17 +22,7 @@
 
   <!-- BOILERPLATE FOR CONFIG? -->
   <!-- <script>
-  var dojoConfig = {
-    parseOnLoad: false,
-    async: true,
-    has: {
-      'esri-promise-compatibility': 1
-    },
-    deps: ['dojo/domReady!'],
-    callback: function () {
-      require(['<%= htmlWebpackPlugin.files.js %>']);
-    }
-  };
+  deleting for now, see previous commit or boilerplate for code
 </script> -->
     <!-- BOILERPLATE FOR CONFIG? -->
 
